--- a/index.html
+++ b/index.html
@@ -86,54 +86,40 @@
     </nav>
   </header>
 
-  <div class="categories-sidebar" id="categories-sidebar">
-    <div class="sidebar-header">
-      <h3><i class="fas fa-list"></i> Categorias</h3>
-      <button class="close-sidebar" id="close-sidebar" aria-label="Fechar menu">
-        <i class="fas fa-times"></i>
-      </button>
-    </div>
-    <ul class="categories-list">
-      <li class="category-item active" data-categoria="todas">
-        <i class="fas fa-th"></i> Todas as Categorias
-      </li>
-      <li class="category-item" data-categoria="eletronicos">
-        <i class="fas fa-mobile-alt"></i> Eletrônicos
-      </li>
-      <li class="category-item" data-categoria="moda">
-        <i class="fas fa-tshirt"></i> Moda & Acessórios
-      </li>
-      <li class="category-item" data-categoria="casa">
-        <i class="fas fa-home"></i> Casa & Decoração
-      </li>
-      <li class="category-item" data-categoria="beleza">
-        <i class="fas fa-magic"></i> Beleza & Cuidados
-      </li>
-      <li class="category-item" data-categoria="esportes">
-        <i class="fas fa-dumbbell"></i> Esportes & Fitness
-      </li>
-      <li class="category-item" data-categoria="infantil">
-        <i class="fas fa-baby"></i> Infantil
-      </li>
-      <li class="category-item" data-categoria="automotivo">
-        <i class="fas fa-car"></i> Automotivo
-      </li>
-      <li class="category-item" data-categoria="games">
-        <i class="fas fa-gamepad"></i> Games & Tecnologia
-      </li>
-      <li class="category-item" data-categoria="livros">
-        <i class="fas fa-book"></i> Livros & Educação
-      </li>
-      <li class="category-item" data-categoria="pet">
-        <i class="fas fa-paw"></i> Pet Shop
-      </li>
-      <li class="category-item" data-categoria="jardinagem">
-        <i class="fas fa-leaf"></i> Jardinagem
-      </li>
-    </ul>
+  <div class="stores-grid">
+  <div class="store-card active" data-loja="todas">
+    <i class="fas fa-th store-icon"></i>
+    <div class="store-name">Todas</div>
   </div>
-  <div class="overlay" id="overlay"></div>
-
+  <div class="store-card" data-loja="amazon">
+    <img src="assets/logos/amazon.svg" alt="Amazon" class="store-logo" />
+    <div class="store-name">Amazon</div>
+  </div>
+  <div class="store-card" data-loja="mercadolivre">
+    <img src="assets/logos/mercadolivre.svg" alt="Mercado Livre" class="store-logo" />
+    <div class="store-name">Mercado Livre</div>
+  </div>
+  <div class="store-card" data-loja="shopee">
+    <img src="assets/logos/shopee.svg" alt="Shopee" class="store-logo" />
+    <div class="store-name">Shopee</div>
+  </div>
+  <div class="store-card" data-loja="magalu">
+    <img src="assets/logos/magalu.svg" alt="Magalu" class="store-logo" />
+    <div class="store-name">Magalu</div>
+  </div>
+  <div class="store-card" data-loja="shein">
+    <img src="assets/logos/shein.svg" alt="Shein" class="store-logo" />
+    <div class="store-name">Shein</div>
+  </div>
+  <div class="store-card" data-loja="alibaba">
+    <img src="assets/logos/alibaba.svg" alt="Alibaba" class="store-logo" />
+    <div class="store-name">Alibaba</div>
+  </div>
+  <div class="store-card" data-loja="americanas">
+    <img src="assets/logos/americanas.svg" alt="Americanas" class="store-logo" />
+    <div class="store-name">Americanas</div>
+  </div>
+</div>
   <main class="main-content">
     <section class="offers-banner" id="inicio">
       <div class="container banner-content">
