--- a/index.html
+++ b/index.html
@@ -92,27 +92,27 @@
     <div class="store-name">Todas</div>
   </div>
   <div class="store-card" data-loja="amazon">
-    <img src="assets/logos/amazon.svg" alt="Amazon" class="store-logo" />
+    <img src="assets/logos/amazon.png" alt="Amazon" class="store-logo" />
     <div class="store-name">Amazon</div>
   </div>
   <div class="store-card" data-loja="mercadolivre">
-    <img src="assets/logos/mercadolivre.svg" alt="Mercado Livre" class="store-logo" />
+    <img src="assets/logos/mercadolivre.jpg" alt="Mercado Livre" class="store-logo" />
     <div class="store-name">Mercado Livre</div>
   </div>
   <div class="store-card" data-loja="shopee">
-    <img src="assets/logos/shopee.svg" alt="Shopee" class="store-logo" />
+    <img src="assets/logos/shopee.png" alt="Shopee" class="store-logo" />
     <div class="store-name">Shopee</div>
   </div>
   <div class="store-card" data-loja="magalu">
-    <img src="assets/logos/magalu.svg" alt="Magalu" class="store-logo" />
+    <img src="assets/logos/magalu.png" alt="Magalu" class="store-logo" />
     <div class="store-name">Magalu</div>
   </div>
   <div class="store-card" data-loja="shein">
-    <img src="assets/logos/shein.svg" alt="Shein" class="store-logo" />
+    <img src="assets/logos/shein.png" alt="Shein" class="store-logo" />
     <div class="store-name">Shein</div>
   </div>
   <div class="store-card" data-loja="alibaba">
-    <img src="assets/logos/alibaba.svg" alt="Alibaba" class="store-logo" />
+    <img src="assets/logos/alibaba.png" alt="Alibaba" class="store-logo" />
     <div class="store-name">Alibaba</div>
   </div>
   <div class="store-card" data-loja="americanas">
