--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
     <div class="footer-bottom">
       <div class="container">
         <div class="footer-disclaimer">
-          <p><i class="fas fa-info-circle"></i> Preços e condições sujeitos à alteração. Sempre verifique nas lojas parceiras.</p>
+          <p><i class="fas fa-info-circle"></i> Este site contém links de afiliados; ao comprar através deles, podemos receber uma comissão sem custo adicional para você.</p>
         </div>
         <div class="footer-copyright">
           <p>&copy; <span id="year">2025</span> Centro de Compras. Todos os direitos reservados.</p>
