--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     </nav>
   </header>
 
-  <aside class="categories-sidebar" id="categories-sidebar">
+  <aside class="categories-sidebar" id="categories-sidebar" role="navigation" aria-label="Menu de categorias">
     <div class="sidebar-header">
       <h3><i class="fas fa-list"></i> Categorias</h3>
       <button class="close-sidebar" id="close-sidebar" aria-label="Fechar menu de categorias">
@@ -137,35 +137,35 @@
         </div>
         
         <div class="stores-grid">
-          <div class="store-card active" data-loja="todas">
+          <div class="store-card active" data-loja="todas" data-tooltip="Ver produtos de todas as lojas">
             <i class="fas fa-th store-icon"></i>
             <div class="store-name">Todas</div>
           </div>
-          <div class="store-card" data-loja="amazon">
+          <div class="store-card" data-loja="amazon" data-tooltip="Loja líder em eletrônicos e livros">
             <img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg" alt="Amazon" class="store-logo" />
             <div class="store-name">Amazon</div>
           </div>
-          <div class="store-card" data-loja="mercadolivre">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/2/29/Mercado_Livre_logo.svg" alt="Mercado Livre" class="store-logo" />
+          <div class="store-card" data-loja="mercadolivre" data-tooltip="Marketplace com ampla variedade de produtos">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/2/29/Mercado_Libre_logo.svg" alt="Mercado Livre" class="store-logo" />
             <div class="store-name">Mercado Livre</div>
           </div>
-          <div class="store-card" data-loja="shopee">
+          <div class="store-card" data-loja="shopee" data-tooltip="Ofertas exclusivas em moda e acessórios">
             <img src="https://upload.wikimedia.org/wikipedia/commons/e/e1/Shopee_logo.svg" alt="Shopee" class="store-logo" />
             <div class="store-name">Shopee</div>
           </div>
-          <div class="store-card" data-loja="magalu">
+          <div class="store-card" data-loja="magalu" data-tooltip="Produtos para casa e tecnologia">
             <img src="https://upload.wikimedia.org/wikipedia/commons/7/79/Magalu_logo.svg" alt="Magalu" class="store-logo" />
             <div class="store-name">Magalu</div>
           </div>
-          <div class="store-card" data-loja="shein">
+          <div class="store-card" data-loja="shein" data-tooltip="Moda acessível e tendências">
             <img src="https://upload.wikimedia.org/wikipedia/commons/c/cf/Shein_logo.svg" alt="Shein" class="store-logo" />
             <div class="store-name">Shein</div>
           </div>
-          <div class="store-card" data-loja="alibaba">
+          <div class="store-card" data-loja="alibaba" data-tooltip="Comércio global com preços competitivos">
             <img src="https://upload.wikimedia.org/wikipedia/commons/6/69/Alibaba_Logo.svg" alt="Alibaba" class="store-logo" />
             <div class="store-name">Alibaba</div>
           </div>
-          <div class="store-card" data-loja="americanas">
+          <div class="store-card" data-loja="americanas" data-tooltip="Variedade em produtos e promoções">
             <img src="https://upload.wikimedia.org/wikipedia/commons/f/f9/Americanas_logo.svg" alt="Americanas" class="store-logo" />
             <div class="store-name">Americanas</div>
           </div>
