--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Centro de Compras - Melhores Ofertas Online</title>
-  <meta name="description" content="Encontre as melhores ofertas em produtos de diversas lojas online no Centro de Compras. Compare preços e economize!" />
+  <title>Centro de Compra - Melhores Ofertas Online</title>
+  <meta name="description" content="Encontre as melhores ofertas em produtos de diversas lojas online no Centro de Compra. Compare preços e economize!" />
   <meta name="keywords" content="e-commerce, compras online, ofertas, produtos, desconto, promoção" />
-  <meta name="author" content="Centro de Compras" />
+  <meta name="author" content="Centro de Compra" />
   
   <!-- Meta tags para SEO -->
-  <meta property="og:title" content="Centro de Compras - Melhores Ofertas Online" />
+  <meta property="og:title" content="Centro de Compra - Melhores Ofertas Online" />
   <meta property="og:description" content="Encontre as melhores ofertas em produtos de diversas lojas online" />
   <meta property="og:type" content="website" />
   <meta name="twitter:card" content="summary_large_image" />
@@ -22,16 +22,12 @@
   <link rel="preload" href="style.css" as="style" />
 </head>
 <body>
-  <div class="connection-status" id="connection-status">
-    <i class="fas fa-wifi"></i> Verificando conexão...
-  </div>
-
   <header class="main-header">
     <div class="header-top">
       <div class="container">
         <div class="header-info">
           <span><i class="fas fa-phone-alt"></i> (21) 9999-9999</span>
-          <span><i class="fas fa-envelope"></i> contato@centrodecompras.com</span>
+          <span><i class="fas fa-envelope"></i> contato@centrodecompra.com</span>
         </div>
         <div class="header-links">
           <a href="#cupons" class="header-link">
@@ -43,7 +39,7 @@
     
     <div class="header-main">
       <div class="container header-content">
-        <img src="/placeholder.svg?height=50&width=150" alt="Logo Centro de Compras" class="logo" id="site-logo" />
+        <h1 class="site-title">Centro de Compra</h1>
         
         <div class="search-section">
           <div class="search-container">
@@ -64,7 +60,7 @@
           <a href="https://wa.me/5521999999999" class="action-btn whatsapp-btn" target="_blank" rel="noopener">
             <i class="fab fa-whatsapp"></i> WhatsApp
           </a>
-          <a href="https://t.me/centrodecompras" class="action-btn telegram-btn" target="_blank" rel="noopener">
+          <a href="https://t.me/centrodecompra" class="action-btn telegram-btn" target="_blank" rel="noopener">
             <i class="fab fa-telegram-plane"></i> Telegram
           </a>
         </div>
@@ -94,22 +90,22 @@
       </button>
     </div>
     <ul class="categories-list">
-      <li class="category-item active" data-categoria="todas">
+      <li class="category-item active" data-categoria="todas" aria-label="Filtrar por todas as categorias">
         <i class="fas fa-th"></i> Todas
       </li>
-      <li class="category-item" data-categoria="eletronicos">
+      <li class="category-item" data-categoria="eletronicos" aria-label="Filtrar por eletrônicos">
         <i class="fas fa-laptop"></i> Eletrônicos
       </li>
-      <li class="category-item" data-categoria="moda">
+      <li class="category-item" data-categoria="moda" aria-label="Filtrar por moda">
         <i class="fas fa-tshirt"></i> Moda
       </li>
-      <li class="category-item" data-categoria="casa">
+      <li class="category-item" data-categoria="casa" aria-label="Filtrar por casa">
         <i class="fas fa-home"></i> Casa
       </li>
-      <li class="category-item" data-categoria="esportes">
+      <li class="category-item" data-categoria="esportes" aria-label="Filtrar por esportes">
         <i class="fas fa-futbol"></i> Esportes
       </li>
-      <li class="category-item" data-categoria="beleza">
+      <li class="category-item" data-categoria="beleza" aria-label="Filtrar por beleza">
         <i class="fas fa-spa"></i> Beleza
       </li>
     </ul>
@@ -218,7 +214,7 @@
   <footer class="main-footer" id="contato">
     <div class="container footer-content">
       <div class="footer-section">
-        <h4>Sobre o Centro de Compras</h4>
+        <h4>Sobre o Centro de Compra</h4>
         <p>Somos uma plataforma que reúne as melhores ofertas de lojas online confiáveis em um só lugar. Nossa missão é ajudar você a economizar tempo e dinheiro nas suas compras online!</p>
         <div class="footer-stats">
           <small><i class="fas fa-users"></i> +50.000 usuários satisfeitos</small>
@@ -264,7 +260,7 @@
           <p><i class="fas fa-info-circle"></i> Este site contém links de afiliados; ao comprar através deles, podemos receber uma comissão sem custo adicional para você.</p>
         </div>
         <div class="footer-copyright">
-          <p>&copy; <span id="year">2025</span> Centro de Compras. Todos os direitos reservados.</p>
+          <p>&copy; <span id="year">2025</span> Centro de Compra. Todos os direitos reservados.</p>
         </div>
       </div>
     </div>
@@ -290,7 +286,7 @@
   </div>
 
   <div class="floating-assistant">
-    <a href="https://wa.me/5521999999999?text=Olá! Gostaria de saber mais sobre as ofertas do Centro de Compras" 
+    <a href="https://wa.me/5521999999999?text=Olá! Gostaria de saber mais sobre as ofertas do Centro de Compra" 
        class="floating-btn" 
        target="_blank" 
        rel="noopener"
