--- a/index.html
+++ b/index.html
@@ -106,6 +106,21 @@
       <li class="category-item" data-categoria="beleza" aria-label="Filtrar por beleza">
         <i class="fas fa-spa"></i> Beleza
       </li>
+      <li class="category-item" data-categoria="livros" aria-label="Filtrar por livros">
+        <i class="fas fa-book"></i> Livros
+      </li>
+      <li class="category-item" data-categoria="brinquedos" aria-label="Filtrar por brinquedos">
+        <i class="fas fa-gamepad"></i> Brinquedos
+      </li>
+      <li class="category-item" data-categoria="saude" aria-label="Filtrar por saúde">
+        <i class="fas fa-heartbeat"></i> Saúde
+      </li>
+      <li class="category-item" data-categoria="automotivo" aria-label="Filtrar por automotivo">
+        <i class="fas fa-car"></i> Automotivo
+      </li>
+      <li class="category-item" data-categoria="alimentos" aria-label="Filtrar por alimentos">
+        <i class="fas fa-utensils"></i> Alimentos
+      </li>
     </ul>
   </aside>
 
