--- a/index.html
+++ b/index.html
@@ -247,6 +247,37 @@
           <li><a href="#suporte">Suporte</a></li>
         </ul>
       </div>
+      <div class="footer-section">
+        <h4>Siga-nos</h4>
+        <div class="social-links">
+          <a href="https://instagram.com/centrodecompra" class="social-link" aria-label="Instagram" target="_blank" rel="noopener">
+            <img src="logos/instagram.png" alt="Instagram" class="social-icon" />
+          </a>
+          <a href="https://facebook.com/centrodecompra" class="social-link" aria-label="Facebook" target="_blank" rel="noopener">
+            <img src="logos/facebook.png" alt="Facebook" class="social-icon" />
+          </a>
+          <a href="https://youtube.com/centrodecompra" class="social-link" aria-label="YouTube" target="_blank" rel="noopener">
+            <img src="logos/youtube.png" alt="YouTube" class="social-icon" />
+          </a>
+          <a href="https://tiktok.com/@centrodecompra" class="social-link" aria-label="TikTok" target="_blank" rel="noopener">
+            <img src="logos/tiktok.png" alt="TikTok" class="social-icon" />
+          </a>
+          <a href="https://t.me/centrodecompra" class="social-link" aria-label="Telegram" target="_blank" rel="noopener">
+            <img src="logos/telegram.jpg" alt="Telegram" class="social-icon" />
+          </a>
+          <a href="https://kwai.com/@centrodecompra" class="social-link" aria-label="Kwai" target="_blank" rel="noopener">
+            <img src="logos/kwai.png" alt="Kwai" class="social-icon" />
+          </a>
+        </div>
+      </div>
+      <div class="footer-section">
+        <h4>Formas de Pagamento</h4>
+        <div class="payment-methods">
+          <img src="logos/visa.png" alt="Visa" class="payment-icon" />
+          <img src="logos/mastercard.png" alt="Mastercard" class="payment-icon" />
+          <img src="logos/boleto.png" alt="Boleto" class="payment-icon" />
+        </div>
+      </div>
     </div>
     <div class="footer-bottom">
       <div class="container">
