--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="header-top">
       <div class="container">
         <div class="header-info">
-          <span><i class="fas fa-phone-alt"></i> (21) 98765-4321</span>
+          <span><i class="fas fa-phone-alt"></i> (21) 99812-3073</span>
           <span><i class="fas fa-envelope"></i> suporte@centrodecompra.com</span>
         </div>
         <div class="header-links">
@@ -61,7 +61,7 @@
         </div>
         
         <div class="header-actions">
-          <a href="https://wa.me/5521987654321" class="action-btn whatsapp-btn" target="_blank" rel="noopener">
+          <a href="https://wa.me/552199812-3073" class="action-btn whatsapp-btn" target="_blank" rel="noopener">
             <i class="fab fa-whatsapp"></i> WhatsApp
           </a>
           <a href="https://t.me/centrodecompra" class="action-btn telegram-btn" target="_blank" rel="noopener">
