--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
         
         <div class="header-actions">
-          <a href="https://wa.me/552199812-3073" class="action-btn whatsapp-btn" target="_blank" rel="noopener">
+          <a href="https://wa.me/5521998123073" class="action-btn whatsapp-btn" target="_blank" rel="noopener">
             <i class="fab fa-whatsapp"></i> WhatsApp
           </a>
           <a href="https://t.me/centrodecompra" class="action-btn telegram-btn" target="_blank" rel="noopener">
